teams/team-2/ghost-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  namespace: team-2
  name: ghost
  labels:
    name: ghost
spec:
  replicas: 1
  selector:
    matchLabels:
      name: ghost
  strategy:
    type: Recreate
  template:
    metadata:
      namespace: team-2
      labels:
        name: ghost
    spec:
      containers:
        - env:
            - name: ALLOW_EMPTY_PASSWORD
              value: "yes"
            - name: GHOST_DATABASE_HOST
              value: mariadb
            - name: GHOST_DATABASE_NAME
              value: bitnami_ghost
            - name: GHOST_DATABASE_PORT_NUMBER
              value: "3306"
            - name: GHOST_DATABASE_USER
              value: bn_ghost
          image: docker.io/bitnami/ghost:4
          name: ghost
          ports:
            - containerPort: 2368
          resources: {}
          volumeMounts:
            - mountPath: /bitnami/ghost
              name: ghost-data
      restartPolicy: Always
      volumes:
        - name: ghost-data
          persistentVolumeClaim:
            claimName: ghost-data
