teams/team-2/blog.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: team-2
  labels:
    app: blog
    version: v1
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
      version: v1
  template:
    metadata:
      labels:
        app: blog
        version: v1
    spec:
      containers:
      - name: blog
        image: ghost:4.22.0-alpine
        ports:
        - containerPort: 2368
        imagePullPolicy: Always
        volumeMounts:
        - name: content 
          mountPath: /var/lib/ghost/content
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: blog-content
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: team-2
  labels:
    app: blog
    version: v2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
      version: v2
  template:
    metadata:
      labels:
        app: blog
        version: v2
    spec:
      containers:
      - name: blog
        image: ghost:4.22.0-alpine
        ports:
        - containerPort: 2368
        imagePullPolicy: Always
        volumeMounts:
        - name: content 
          mountPath: /var/lib/ghost/content
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: blog-content
      restartPolicy: Always
      terminationGracePeriodSeconds: 5

apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: team-2
  labels:
    app: blog
    service: blog
spec:
  ports:
  - port: 2368
    name: http
  selector:
    app: blog
---
