teams/team-2/ghost-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.24.0 (4a2a0458)
  creationTimestamp: null
  labels:
    io.kompose.service: ghost
  name: ghost
spec:
  ports:
    - name: "80"
      port: 80
      targetPort: 2368
  selector:
    io.kompose.service: ghost
