teams/team-2/ghost.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: blog
  namespace: team-2
spec:
  replicas: 1
  selector:
    matchLabels:
      app: blog
  template:
    metadata:
      labels:
        app: blog
    spec:
      containers:
      - name: blog
        image: ghost:4.22.0-alpine
        ports:
        - containerPort: 2368
        imagePullPolicy: Always
        volumeMounts:
        - name: content 
          mountPath: /var/lib/ghost/content
      volumes:
      - name: content
        persistentVolumeClaim:
          claimName: blog-content
      restartPolicy: Always
      terminationGracePeriodSeconds: 5
---
apiVersion: v1
kind: Service
metadata:
  name: blog
  namespace: team-2
spec:
  ports:
  - protocol: TCP
    port: 80
    targetPort: 2368
  selector:
    app: blog
  type: LoadBalancer
---
