teams/team-2/mariadb-service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: team-2
  name: mariadb
spec:
  selector:
    name: mariadb
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
  type: ClusterIP
