teams/team-2/gateway.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: blog-gateway
  namespace: team-2
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: blog
  namespace: team-2
spec:
  hosts:
  - "*"
  gateways:
  - blog-gateway
  http:
  - match:
    - uri:
        exact: /blog
    route:
    - destination:
        host: blog
        port:
          number: 2368
